added changes on update role functionality
