# src/controllers/userController.js
@@ -28,18 +28,20 @@ export class UserControllers {
   async updateRole(req, res) {
     try {
       const email = req.body.email;
-      const role = req.body.role;
       const user = await userExist(email);
 
       if (user == null) {
         res.status(400).json({ message: "User does not exist! " });
         return false;
       } else {
-        const updatedUser = await updatedRole(role, email)
+        const updatedUser = await updatedRole(req.params.id, email)
+        
+        if(updatedUser == null){
+          return res.status(400).json({ message: "this role does not exist" });
+        }
         return res.status(200).json({ message:updatedUser})
         }
     } catch (error) {
-      console.log(error);
       return res.status(500).json({ message: error });
     }
   }
