# swagger.json
@@ -71,13 +71,19 @@
             }
         },
        
-        "/api/v1/users/updateRole": {
+        "/api/v1/users/updateRole/{id}": {
             "patch": {
               "tags": ["Users"],
               "summary": "This will update a role of the user",
               "description": " ",
               "produces": ["application/json"],
               "parameters": [
+                {
+                  "name": "id",
+                  "in": "path",
+                  "description": "id",
+                  "required": true
+                },
                 {
                 "name": "Body",
                 "in": "body",
@@ -129,10 +135,8 @@
             "properties": {
                   "email": {
                       "type": "string"
-                  },
-                  "role": {
-                      "type": "string"
                   }
+                 
               }
           }
     }
